# Picking-Robot

./: .gitignore  README.md  pyproject.toml
notebooks/: problem_2.ipynb
picking_robot/: __init__.py  main.py
picking_robot/cli/: dataset_cli.py  toolkit.py  training_cli.py
picking_robot/configs/: data.yml
picking_robot/dataset/: generics.py  segmentation.py
picking_robot/model/: segmentation.py
picking_robot/utils/: calculation.py  optimization.py  processing.py
results/problem_1/: 102.txt  121.txt  124.txt  128.txt  134.txt  135.txt  138.txt  139.txt  142.txt  148.txt
